link up essay and revisionaccordians

--- a/essay-skills/index.html
+++ b/essay-skills/index.html
@@ -449,63 +449,56 @@
     <div class="content">
       <div class="left-panel">
         <!-- start sections -->
-        <button class="accordion">Learn</button>
-        <div class="panel">
-          <div class="topic">
-            <span>Learn</span>
-            <a href="learn-folders/">
-              <button class="start-learning">Start Learning</button>
-            </a>
-          </div>
-        </div>
         <!--####################################################################################-->
         <button class="accordion">Analysing</button>
         <div class="panel">
           <div class="topic">
             <span>How to Analyse</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/analysing/how_to_analyse.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>Analytical Paragraph Structure</span>
-            <a href="learn-folders/">
+            <a
+              href="learn-folders/analysing/analytical_paragraph_structure.html"
+            >
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>P (Point)</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/analysing/point.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>ET (Evidence Technique)</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/analysing/evidence_technique.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>A (Analysis)</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/analysing/analysis.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>ETA 2 (Evidence, Technique, Analysis)</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/analysing/evidence_technique_analysis.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>C (Contxet)</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/analysing/context.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>WL (Writers Intentions + Link)</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/analysing/writers_intentions_link.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
@@ -515,13 +508,15 @@
         <div class="panel">
           <div class="topic">
             <span>Language Technique Sheet</span>
-            <a href="learn-folders/">
+            <a
+              href="learn-folders/technique-sheets/language_technique_sheet.html"
+            >
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>Structure Techniques</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/technique-sheets/structure_techniques.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
@@ -531,7 +526,7 @@
         <div class="panel">
           <div class="topic">
             <span>Conclusion</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/writing-a-conclusion/conclusion.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
@@ -541,25 +536,33 @@
         <div class="panel">
           <div class="topic">
             <span>How to get the most out of reading grade 9 essays</span>
-            <a href="learn-folders/">
+            <a
+              href="learn-folders/how-to-approach-essay-writing/how_to_get_the_most_out_of_reading_grade_9_essays.html"
+            >
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>How to effectively plan any Literature essays</span>
-            <a href="learn-folders/">
+            <a
+              href="learn-folders/how-to-approach-essay-writing/how_to_properly_write_up_literature_essays.html"
+            >
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>How to properly write up Literature essays</span>
-            <a href="learn-folders/">
+            <a
+              href="learn-folders/how-to-approach-essay-writing/how_to_properly_write_up_literature_essays.html"
+            >
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>How to plan Language questions</span>
-            <a href="learn-folders/">
+            <a
+              href="learn-folders/how-to-approach-essay-writing/how_to_plan_language_questions.html"
+            >
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
