--- a/revision/index.html
+++ b/revision/index.html
@@ -449,39 +449,38 @@
     <div class="content">
       <div class="left-panel">
         <!-- start sections -->
-        <button class="accordion">Learn</button>
-        <div class="panel">
-          <div class="topic">
-            <span>Learn</span>
-            <a href="learn-folders/">
-              <button class="start-learning">Start Learning</button>
-            </a>
-          </div>
-        </div>
         <!--####################################################################################-->
         <button class="accordion">How To Make Notes</button>
         <div class="panel">
           <div class="topic">
             <span>How To Use This Section</span>
-            <a href="learn-folders/">
+            <a
+              href="learn-folders/how-to-make-notes/how_to_use_this_section.html"
+            >
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>How To Make Notes For Poetry</span>
-            <a href="learn-folders/">
+            <a
+              href="learn-folders/how-to-make-notes/how_to_make_notes_for_poetry.html"
+            >
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>How To Make Notes For Shakespears's Plays</span>
-            <a href="learn-folders/">
+            <a
+              href="learn-folders/how-to-make-notes/how_to_make_notes_for_shakespeares_plays.html"
+            >
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>How To Make Notes For Language Papers</span>
-            <a href="learn-folders/">
+            <a
+              href="learn-folders/how-to-make-notes/how_to_make_notes_for_language_papers.html"
+            >
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
@@ -491,25 +490,29 @@
         <div class="panel">
           <div class="topic">
             <span>How To Use This Section</span>
-            <a href="learn-folders/">
+            <a
+              href="learn-folders/how-to-revise-your-notes/how_to_use_this_section.html"
+            >
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>The Lightup Method</span>
-            <a href="learn-folders/">
+            <a
+              href="learn-folders/how-to-revise-your-notes/the_lightup_method.html"
+            >
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>Blurting</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/how-to-revise-your-notes/blurting.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>Flash Cards</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/how-to-revise-your-notes/flashcards.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
@@ -519,25 +522,33 @@
         <div class="panel">
           <div class="topic">
             <span>Love + Relationship Poetry</span>
-            <a href="learn-folders/">
+            <a
+              href="learn-folders/printable-revision-sheets/love_and_relationship_poetry.html"
+            >
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>An Inspector Calls</span>
-            <a href="learn-folders/">
+            <a
+              href="learn-folders/printable-revision-sheets/an_inspector_calls.html"
+            >
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>A Christmas Carol</span>
-            <a href="learn-folders/">
+            <a
+              href="learn-folders/printable-revision-sheets/a_christmas_carol.html"
+            >
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>Romeo + Juliet</span>
-            <a href="learn-folders/">
+            <a
+              href="learn-folders/printable-revision-sheets/romeo_and_juliet.html"
+            >
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
