link accordians lan + lit

--- a/english-language/paper-two/index.html
+++ b/english-language/paper-two/index.html
@@ -457,7 +457,7 @@
         <div class="panel">
           <div class="topic">
             <span>Question 5 (Persuasive Writing) Past Paper Question</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/Past Paper Questions/question_5__(persuasive_writing)_past_paper_question.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
@@ -467,25 +467,25 @@
         <div class="panel">
           <div class="topic">
             <span>Write down structure for each question</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/Learn/write_down_structure_for_each_question.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>Full Past Paper 1</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/Learn/full_past_paper_1.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>Full Past Paper 2</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/Learn/full_past_paper_2.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>Language Paper 2 Summary</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/Learn/language_paper_2_summary.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
@@ -495,25 +495,25 @@
         <div class="panel">
           <div class="topic">
             <span>How To Make Notes For Language Papers</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/Notes/how_to_make_notes_for_language_papers.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>Language Technique Sheet</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/Notes/language_technique_papers.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>Structure Techniques</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/Notes/structure_techniques.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>How To Plan Language Papers</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/Notes/how_to_plan_language_questions.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
@@ -523,7 +523,7 @@
         <div class="panel">
           <div class="topic">
             <span>Question 1</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/Question 1/question_1.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
@@ -533,7 +533,7 @@
         <div class="panel">
           <div class="topic">
             <span>Question 2</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/Question 2/question_2.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
@@ -543,7 +543,7 @@
         <div class="panel">
           <div class="topic">
             <span>Question 3</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/Question 3/question_3.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
@@ -553,7 +553,7 @@
         <div class="panel">
           <div class="topic">
             <span>Question 4</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/Question 4/question_4.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
@@ -563,13 +563,13 @@
         <div class="panel">
           <div class="topic">
             <span>Question 5 - Persuasive Writing</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/Question 5 - persuasive writing/question_5_-_persuasive_writing.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>SWEEP</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/Question 5 - persuasive writing/SWEEP.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
@@ -579,19 +579,19 @@
         <div class="panel">
           <div class="topic">
             <span>Insert</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/2020 Past Paper/insert.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>Questions</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/2020 Past Paper/questions.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>Mark Scheme</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/2020 Past Paper/mark_scheme.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
@@ -601,19 +601,19 @@
         <div class="panel">
           <div class="topic">
             <span>Insert</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/2021 Past Paper/insert.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>Questions</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/2021 Past Paper/questions.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>Mark Scheme</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/2021 Past Paper/mark_scheme.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
@@ -623,19 +623,19 @@
         <div class="panel">
           <div class="topic">
             <span>Insert</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/2022 Past Paper/insert.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>Questions</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/2022 Past Paper/questions.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>Mark Scheme</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/2022 Past Paper/mark_scheme.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
@@ -645,13 +645,13 @@
         <div class="panel">
           <div class="topic">
             <span>2021 Past Paper Answered</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/Grade 9 Essays/2021_past_paper_answered.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>Fast Fashion Article</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/Grade 9 Essays/grade_9_fast_fashion_article.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
