--- a/english-language/paper-one/index.html
+++ b/english-language/paper-one/index.html
@@ -456,13 +456,13 @@
         <div class="panel">
           <div class="topic">
             <span>Full Past Paper 1</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/Learn/full_past_paper_1.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>Language Paper 1 Summary</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/Learn/language_paper_1_summary.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
@@ -472,7 +472,7 @@
         <div class="panel">
           <div class="topic">
             <span>Write down structure for each question</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/Learn Structure/write_down_structure_for_each_question.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
@@ -482,25 +482,25 @@
         <div class="panel">
           <div class="topic">
             <span>How To Make Notes For Language Papers</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/Notes/how_to_make_notes_for_language_papers.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>Language Technique Sheet</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/Notes/language_technique_sheets.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>Structure Techniques</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/Notes/structure_techniques.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>How To Plan Language Questions</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/Notes/how_to_plan_language_questions.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
@@ -510,7 +510,7 @@
         <div class="panel">
           <div class="topic">
             <span>Question 1</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/Question 1/question_1.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
@@ -520,7 +520,7 @@
         <div class="panel">
           <div class="topic">
             <span>Question 2</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/Question 2/question_2.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
@@ -530,7 +530,7 @@
         <div class="panel">
           <div class="topic">
             <span>Question 3</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/Question 3/question_3.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
@@ -540,7 +540,7 @@
         <div class="panel">
           <div class="topic">
             <span>Question 4</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/Question 4/question_4.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
@@ -550,25 +550,25 @@
         <div class="panel">
           <div class="topic">
             <span>Creative Writing Vocab</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/Question 5 - creative writing/creative_writing_vocab.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>Question 5 - Creative Writing</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/Question 5 - creative writing/question_5_-_creative_writing.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>Question 5 (Creative Writing) Past Paper Question</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/Question 5 - creative writing/question_5_(creative_writing)_past_paper_questions.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>How to adapt any piece of creative writing</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/Question 5 - creative writing/how_to_adapt_any_piece_of_creative.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
@@ -578,19 +578,19 @@
         <div class="panel">
           <div class="topic">
             <span>Insert</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/2020 Past Paper/insert.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>Questions</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/2020 Past Paper/questions.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>Mark Scheme</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/2020 Past Paper/mark_scheme.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
@@ -600,19 +600,19 @@
         <div class="panel">
           <div class="topic">
             <span>Insert</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/2021 Past Paper/insert.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>Questions</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/2021 Past Paper/questions.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>Mark Scheme</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/2021 Past Paper/mark_scheme.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
@@ -622,19 +622,19 @@
         <div class="panel">
           <div class="topic">
             <span>Insert</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/2022 Past Paper/insert.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>Questions</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/2022 Past Paper/questions.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>Mark Scheme</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/2022 Past Paper/mark_scheme.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
@@ -644,19 +644,19 @@
         <div class="panel">
           <div class="topic">
             <span>2020 Past Paper Answered</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/Grade 9 Essays/2020_past_paper_answered.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>Hot Description</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/Grade 9 Essays/hot_description.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>Cold Description</span>
-            <a href="learn-folders/">
+            <a href="learn-folders/Grade 9 Essays/cold_description.html">
               <button class="start-learning">Start Learning</button>
             </a>
           </div>
