acc accordian linked up

--- a/english-literature/gcse-texts/a-christmas-carol/index.html
+++ b/english-literature/gcse-texts/a-christmas-carol/index.html
@@ -457,10 +457,8 @@
         <div class="panel">
           <div class="topic">
             <span>Learn</span>
-            <a href="learn-folders/learn-aic/learn.html">
-              <a href="learn-folders/">
-                <button class="start-learning">Start Learning</button>
-              </a>
+            <a href="learn-folders/learn/learn.html">
+              <button class="start-learning">Start Learning</button>
             </a>
           </div>
         </div>
@@ -470,35 +468,27 @@
           <div class="topic">
             <span>How To Make Notes For A Christmas Carol</span>
             <a
-              href="learn-folders/notes/how_to_make_notes_for_an_inspector_calls.html"
+              href="learn-folders/notes/how_to_make_notes_for_a_christmas_carol.html"
             >
-              <a href="learn-folders/">
-                <button class="start-learning">Start Learning</button>
-              </a>
+              <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>Summary</span>
             <a href="learn-folders/notes/summary.html">
-              <a href="learn-folders/">
-                <button class="start-learning">Start Learning</button>
-              </a>
+              <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>Context</span>
             <a href="learn-folders/notes/context.html">
-              <a href="learn-folders/">
-                <button class="start-learning">Start Learning</button>
-              </a>
+              <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>Grade 9 Key Words</span>
             <a href="learn-folders/notes/grade_9_key_words.html">
-              <a href="learn-folders/">
-                <button class="start-learning">Start Learning</button>
-              </a>
+              <button class="start-learning">Start Learning</button>
             </a>
           </div>
         </div>
@@ -507,34 +497,28 @@
         <div class="panel">
           <div class="topic">
             <span>Scrooge Key Themes</span>
-            <a href="learn-folders/key-themes/mr_birling.html">
-              <a href="learn-folders/">
-                <button class="start-learning">Start Learning</button>
-              </a>
+            <a href="learn-folders/Key Themes/scrooge_key_themes.html">
+              <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>The Ghosts Key Themes</span>
-            <a href="learn-folders/key-themes/mrs_birling.html">
-              <a href="learn-folders/">
-                <button class="start-learning">Start Learning</button>
-              </a>
+            <a href="learn-folders/Key Themes/the_ghosts_key_themes.html">
+              <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>Bob Cratchit/Cratchits Key Themes</span>
-            <a href="learn-folders/key-themes/sheila.html">
-              <a href="learn-folders/">
-                <button class="start-learning">Start Learning</button>
-              </a>
+            <a
+              href="learn-folders/Key Themes/bob_cratchit_cratchits_key_themes.html"
+            >
+              <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>Fred Key Themes</span>
-            <a href="learn-folders/key-themes/eric.html">
-              <a href="learn-folders/">
-                <button class="start-learning">Start Learning</button>
-              </a>
+            <a href="learn-folders/Key Themes/fred_key_themes.html">
+              <button class="start-learning">Start Learning</button>
             </a>
           </div>
         </div>
@@ -543,58 +527,44 @@
         <div class="panel">
           <div class="topic">
             <span>Scrooge Stave 1</span>
-            <a href="learn-folders/mr-birling/mr_birling_act_1.html">
-              <a href="learn-folders/">
-                <button class="start-learning">Start Learning</button>
-              </a>
+            <a href="learn-folders/Scrooge/scrooge_stave_1.html">
+              <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>Scrooge Stave 2</span>
-            <a href="learn-folders/mr-birling/mr_birling_act_2.html">
-              <a href="learn-folders/">
-                <button class="start-learning">Start Learning</button>
-              </a>
+            <a href="learn-folders/Scrooge/scrooge_stave_2.html">
+              <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>Scrooge Stave 3</span>
-            <a href="learn-folders/mr-birling/mr_birling_act_3.html">
-              <a href="learn-folders/">
-                <button class="start-learning">Start Learning</button>
-              </a>
+            <a href="learn-folders/Scrooge/scrooge_stave_3.html">
+              <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>Scrooge Stave 4</span>
-            <a href="learn-folders/mr-birling/mr_birling_act_3.html">
-              <a href="learn-folders/">
-                <button class="start-learning">Start Learning</button>
-              </a>
+            <a href="learn-folders/Scrooge/scrooge_stave_4.html">
+              <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>Scrooge Stave 5</span>
-            <a href="learn-folders/mr-birling/mr_birling_act_3.html">
-              <a href="learn-folders/">
-                <button class="start-learning">Start Learning</button>
-              </a>
+            <a href="learn-folders/Scrooge/scrooge_stave_5.html">
+              <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>Summarised Notes</span>
-            <a href="learn-folders/mr-birling/summarised_notes.html">
-              <a href="learn-folders/">
-                <button class="start-learning">Start Learning</button>
-              </a>
+            <a href="learn-folders/Scrooge/summarised_notes.html">
+              <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>Scrooge Theme Table</span>
-            <a href="learn-folders/mr-birling/mr_birling_theme_table.html">
-              <a href="learn-folders/">
-                <button class="start-learning">Start Learning</button>
-              </a>
+            <a href="learn-folders/Scrooge/scrooge_themes_table.html">
+              <button class="start-learning">Start Learning</button>
             </a>
           </div>
         </div>
@@ -603,66 +573,60 @@
         <div class="panel">
           <div class="topic">
             <span>The Ghost of Christmas Past</span>
-            <a href="learn-folders/mrs-birling/mrs_birling_act_1.html">
-              <a href="learn-folders/">
-                <button class="start-learning">Start Learning</button>
-              </a>
+            <a href="learn-folders/The Ghosts/the_ghost_of_christmas_past.html">
+              <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>The Ghost of Christmas Past Theme Table</span>
-            <a href="learn-folders/mrs-birling/mrs_birling_act_2.html">
-              <a href="learn-folders/">
-                <button class="start-learning">Start Learning</button>
-              </a>
+            <a
+              href="learn-folders/The Ghosts/the_ghost_of_christmas_past_theme_table.html"
+            >
+              <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>Marley</span>
-            <a href="learn-folders/mrs-birling/mrs_birling_act_3.html">
-              <a href="learn-folders/">
-                <button class="start-learning">Start Learning</button>
-              </a>
+            <a href="learn-folders/The Ghosts/marley.html">
+              <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>Marley Theme Table</span>
-            <a href="learn-folders/mrs-birling/summarised_notes.html">
-              <a href="learn-folders/">
-                <button class="start-learning">Start Learning</button>
-              </a>
+            <a href="learn-folders/The Ghosts/marley_theme_table.html">
+              <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>The Ghost of Christmas Present</span>
-            <a href="learn-folders/mrs-birling/mrs_birling_theme_table.html">
-              <a href="learn-folders/">
-                <button class="start-learning">Start Learning</button>
-              </a>
+            <a
+              href="learn-folders/The Ghosts/the_ghost_of_christmas_present.html"
+            >
+              <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>The Ghost of Christmas Present Theme Table</span>
-            <a href="learn-folders/mrs-birling/mrs_birling_theme_table.html">
-              <a href="learn-folders/">
-                <button class="start-learning">Start Learning</button>
-              </a>
+            <a
+              href="learn-folders/The Ghosts/the_ghost_of_christmas_present_theme_table.html"
+            >
+              <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>The Ghost of Christmas Yet to Come</span>
-            <a href="learn-folders/mrs-birling/mrs_birling_theme_table.html">
-              <a href="learn-folders/">
-                <button class="start-learning">Start Learning</button>
-              </a>
+            <a
+              href="learn-folders/The Ghosts/the_ghost_of_christmas_yet_to_come.html"
+            >
+              <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>The Ghost of Christmas Yet to Come Theme Table</span>
-            <a href="learn-folders/mrs-birling/mrs_birling_theme_table.html">
-              <a href="learn-folders/">
-                <button class="start-learning">Start Learning</button>
-              </a>
+            <a
+              href="learn-folders/The Ghosts/the_ghost_of_christmas_yet_to_come_theme_table.html"
+            >
+              <button class="start-learning">Start Learning</button>
             </a>
           </div>
         </div>
@@ -671,18 +635,14 @@
         <div class="panel">
           <div class="topic">
             <span>Bob Cratchit</span>
-            <a href="learn-folders/sheila/sheila_act_1.html">
-              <a href="learn-folders/">
-                <button class="start-learning">Start Learning</button>
-              </a>
+            <a href="learn-folders/Bob Cratchit/Bob_Cratchit.html">
+              <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>Bob Cratchit Theme Table</span>
-            <a href="learn-folders/sheila/sheila_act_2.html">
-              <a href="learn-folders/">
-                <button class="start-learning">Start Learning</button>
-              </a>
+            <a href="learn-folders/Bob Cratchit/bob_cratchit_theme_table.html">
+              <button class="start-learning">Start Learning</button>
             </a>
           </div>
         </div>
@@ -691,18 +651,14 @@
         <div class="panel">
           <div class="topic">
             <span>Fred</span>
-            <a href="learn-folders/eric/eric_act_1.html">
-              <a href="learn-folders/">
-                <button class="start-learning">Start Learning</button>
-              </a>
+            <a href="learn-folders/Fred/fred.html">
+              <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>Fred Theme Table</span>
-            <a href="learn-folders/eric/eric_act_2.html">
-              <a href="learn-folders/">
-                <button class="start-learning">Start Learning</button>
-              </a>
+            <a href="learn-folders/Fred/fred_theme_table.html">
+              <button class="start-learning">Start Learning</button>
             </a>
           </div>
         </div>
@@ -712,11 +668,9 @@
           <div class="topic">
             <span>AQA Style Practice Questions</span>
             <a
-              href="learn-folders/practice-questions/aqa_style_practice_questions.html"
+              href="learn-folders/Lightup Practice Questions/aqa_style_practice_questions.html"
             >
-              <a href="learn-folders/">
-                <button class="start-learning">Start Learning</button>
-              </a>
+              <button class="start-learning">Start Learning</button>
             </a>
           </div>
         </div>
@@ -725,28 +679,22 @@
         <div class="panel">
           <div class="topic">
             <span>Transformation essay plan</span>
-            <a href="learn-folders/essay-plans/guilt_essay_plan.html">
-              <a href="learn-folders/">
-                <button class="start-learning">Start Learning</button>
-              </a>
+            <a href="learn-folders/Essay Plans/transformation_essay_plan.html">
+              <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>Kindness and family essay plan</span>
             <a
-              href="learn-folders/essay-plans/social_responsibility_essay_plan.html"
+              href="learn-folders/Essay Plans/kindness_and_family_essay_plan.html"
             >
-              <a href="learn-folders/">
-                <button class="start-learning">Start Learning</button>
-              </a>
+              <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>Supernatural essay plan</span>
-            <a href="learn-folders/essay-plans/mrs_birling_essay_plan.html">
-              <a href="learn-folders/">
-                <button class="start-learning">Start Learning</button>
-              </a>
+            <a href="learn-folders/Essay Plans/supernatural_essay_plan.html">
+              <button class="start-learning">Start Learning</button>
             </a>
           </div>
         </div>
@@ -756,11 +704,9 @@
           <div class="topic">
             <span>AQA Past Paper Questions</span>
             <a
-              href="learn-folders/past-paper-questions/aqa_past_paper_questions.html"
+              href="learn-folders/Past Paper Questions/aqa_past_paper_questions.html"
             >
-              <a href="learn-folders/">
-                <button class="start-learning">Start Learning</button>
-              </a>
+              <button class="start-learning">Start Learning</button>
             </a>
           </div>
         </div>
@@ -770,11 +716,9 @@
           <div class="topic">
             <span>'Joy and happiness in A Christmas Carol'</span>
             <a
-              href="learn-folders/grade-9-essays/how_does_priestley_present_society_as_unfair.html"
+              href="learn-folders/Grade 9 Essays/joy_and_happiness_in_a_christmas_carol.html"
             >
-              <a href="learn-folders/">
-                <button class="start-learning">Start Learning</button>
-              </a>
+              <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
@@ -782,31 +726,25 @@
               >'Ghosts help Scrooge to change his behaviour and attitude'</span
             >
             <a
-              href="learn-folders/grade-9-essays/how_far_does_priestley_present_male_characters_as_irresponsible.html"
+              href="learn-folders/Grade 9 Essays/ghosts_help_scrooge_to_change_his_behaviour_and_attitude.html"
             >
-              <a href="learn-folders/">
-                <button class="start-learning">Start Learning</button>
-              </a>
+              <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>'How Dickens creates atmosphere in the novella'</span>
             <a
-              href="learn-folders/grade-9-essays/how_does_priestley_use_mr_birling_to_present_his_concerns_in_society.html"
+              href="learn-folders/Grade 9 Essays/how_dickens_creates_atmosphere_in_the_novella.html"
             >
-              <a href="learn-folders/">
-                <button class="start-learning">Start Learning</button>
-              </a>
+              <button class="start-learning">Start Learning</button>
             </a>
           </div>
           <div class="topic">
             <span>'Explore how redemption is presented'</span>
             <a
-              href="learn-folders/grade-9-essays/how_does_priestley_use_mrs_birling_to_explore_ideas_about_social_class.html"
+              href="learn-folders/Grade 9 Essays/explore_how_redemption_is_presented.html"
             >
-              <a href="learn-folders/">
-                <button class="start-learning">Start Learning</button>
-              </a>
+              <button class="start-learning">Start Learning</button>
             </a>
           </div>
         </div>
